syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/okeefem2/simple_bank/pb";

message LoginUserRequest {
  // Numbers 1-15 take only 1 byte to encode
  // larger numbers require >= 2 bytes
  string username = 1;
  string password = 2;
}

message LoginUserResponse {
  // Numbers 1-15 take only 1 byte to encode
  // larger numbers require >= 2 bytes
  User user = 1;
  string session_id = 2;
  string access_token = 3;
  string refresh_token = 4;
}
